--- a/index.adoc
+++ b/index.adoc
@@ -1,5 +1,6 @@
 :source-highlighter: pygments 	
 :stem: 
+
 = DCA0445: Processamento Digital de Imagens
 Joelson Rocha <JoelsonRocha.Eng@gmail.com>
 :toc: left
@@ -14,15 +15,12 @@ Os códigos foram desenvolvidos na linguagem de programação C++.
 == 1. Unidade I ==
 
 === 1.1 Invertendo cores de uma região ===
-Este programa deverá ser capaz de receber como entrada dois pontos, stem:[\P_{1}] e stem:[\P_{2}] que compõem um retângulo de vértices opostos. O programa será capaz de criar o efeito de negativo  na região delimitada pelo usuário.	
+O programa link:PDI/regions.cpp[regions] é capaz de receber como entrada dois pontos (stem:[\P_{1}] e stem:[\P_{2}])  que compõem um retângulo de vértices opostos. Essa região, em efeito negativo, é criada na imagem abaixo,.	
 //suporte a figuras png,jpg,gif e SVG
-// Link: url[texto_exibido]
-//incluir figura, arquivos: <<fig_hello>>
-//[[fig_hello,Hello]]
-//text[.text-center]
-//.Saída do programa hello
-//image:: caminho ao arquivo[saida do programa hello, title 
-//"saida do programa hello"]
+// Link: [texto_exibido]
+
+image::figures/regions.png[]
+.Saída do programa Regions.
 
 //INCLUIR CÓDIGO FONTE
 
@@ -33,12 +31,6 @@ Este programa deverá ser capaz de receber como entrada dois pontos, stem:[\P_{1
 include::PDI/regions.cpp[]
 ----
 
-// USO DE EQUAÇÕES
 
-//podem ser inseridas equacoes como stem:[\int_a^b f(x)dx]
-//BIBLIOGRAFIA
 
-//== BIBILIOGRAFIA ==
-[bibliography]
 
-//:imagesdir: ./figs
