versão final de relatório

--- a/Relatório - PDI ReCam/bib/bibliografia.bib
+++ b/Relatório - PDI ReCam/bib/bibliografia.bib
@@ -42,45 +42,45 @@
   OPTannote = 	 {},
 }
 
-@Manual{man-orbix99,
-  title = 	 {Orbix Programming Reference},
+@Manual{fab,
+  title = 	 {Um modelo de gravação seletiva de imagens em sistemas de segurança},
   OPTkey = 	 {},
-  author = 	 {IONA},
-  organization = {IONA Technologies PLC},
-  address = 	 {Dublin, Ireland},
+  author = 	 {Fabrício Bezerra Gondim},
+  organization = {Federal University of Rio Grande do Norte- UFRN},
+  address = 	 {Natal, Rio Grande do Norte},
   OPTedition = 	 {},
-  month = 	 oct,
-  year = 	 1999,
+  month = 	 ag,
+  year = 	2016,
   OPTnote = 	 {},
   OPTannote = 	 {}
 }
 
-@TechReport{hp-novet03,
-  author = 	 {Meireles, Flamingo},
-  title = 	 {{NOVET}'s Homepage},
-  institution =  {The Academic Computer Society},
-  address = 	 {Caicó, RN},
-  year = 	 2003,
+@TechReport{opencv,
+  author = 	 {},
+  title = 	 {OpenCV Documentation},
+  institution =  {},
+  address = 	 {},
+  year = 	 2017,
   OPTkey = 	 {},
   type =	 {Página na Internet},
-  key = 	 {NOVET},
-  month =	 aug,
-  URL =	 	 {\url{http://www.aligatesta.com.su/}},
+  key = 	 {},
+  month =	 nov,
+  URL =	 	 {\url{https://opencv.org/}},
   OPTannote = 	 {}
 }
 
-@Book{LATEX04,
-  author = 	 {Frank Mittelbach and Michel Goossens},
+@Book{PDI,
+  author = 	 {Rafael C. Gonzalez and Richard E. Woods},
   ALTeditor = 	 {},
-  title = 	 {The {\LaTeX} Companion},
-  publisher = 	 {Addison-Wesley},
-  year = 	 2004,
+  title = 	 {Digital Image Processing},
+  publisher = 	 {},
+  year = 	 2009,
   OPTkey = 	 {},
   OPTvolume = 	 {},
   OPTnumber = 	 {},
   OPTseries = 	 {},
-  address = 	 {San Francisco, EUA},
-  edition = 	 2,
+  address = 	 {},
+  edition = 	 3,
   OPTmonth = 	 {},
   OPTnote = 	 {},
   OPTannote = 	 {}
@@ -199,15 +199,15 @@
   OPTannote = 	 {}
 }
 
-@Article{art-solimaes03,
-  author = 	 {Eliane G. Solimães and Antonio T. Mircolles and Jamerson L. Pereira and Bruno G. Americano and Katianna Silva and Marcelo Borges and Mauricio F. Magalhães},
-  title = 	 {A Virtual Laboratory for Autonomous Airplanes Experiments},
-  journal = 	 {IEEE Transactions on Education},
-  year = 	 2003,
+@Article{vj,
+  author = 	 {Paul Viola and Michael Jones},
+  title = 	 {Rapid object detection using a boosted cascade of simple features},
+  journal = 	 {Computer Vision and Pattern Recognition},
+  year = 	 2001,
   OPTkey = 	 {},
-  volume = 	 {46},
+  volume = 	 {},
   number = 	 {1},
-  pages = 	 {37-42},
+  pages = 	 {1-9},
   month = 	 feb,
   OPTnote = 	 {},
   OPTannote = 	 {}
