--- a/Relatório - PDI ReCam/MODELO_-_CONTROLE.tex
+++ b/Relatório - PDI ReCam/MODELO_-_CONTROLE.tex
@@ -24,7 +24,7 @@
 \usepackage{mathptmx}
 \usepackage{amsmath}
 \usepackage{changepage}
-
+\usepackage{cite}
 %\usepackage[alf]{abntex2cite}
 
 %%%%%%%%%%% PDF METADATA %%%%%%%%%%%%%
@@ -77,31 +77,26 @@ CURSO DE ENGENHARIA MECATRÔNICA
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA 
+{\bf{\large RECAM: MÓDULO DE GRAVAÇÃO INTELIGENTE PARA CÂMERAS DE SEGURANÇA, BASEADO NA DETECÇÃO DE FACES EM CENA.
 }}
-\vspace{1.5cm}
-{\large TURMA: 01\\}
+\vspace{0.4 cm}
+{\large \\}
 
-\vspace{3.6cm}
+\vspace{5.6cm}
 
 
 
 \begin{flushright}
 \begin{normalsize}
-CAIO JOSÉ BORBA VILAR GUIMARÃES:  20160154120 \\
-\vspace{0.8cm}
-DANIEL GALVÃO DE AZEVEDO: 2016008193 \\
-\vspace{0.8cm}
-FELIPE FERNANDES LOPES : 20160154219 \\
-\vspace{0.8cm}
+
 JOELSON DE CARVALHO ROCHA JÚNIOR: 20160153946\\
 \vspace{0.8cm}
- LUCAS RAMALHO NOBRE: 20160154308\\
+
 \end{normalsize}
 \end{flushright}
 
 
-\vspace{2.5cm}
+\vspace{6 cm}
 
 {\large Natal-RN\\
 2017}
@@ -116,21 +111,17 @@ JOELSON DE CARVALHO ROCHA JÚNIOR: 20160153946\\
 
 \begin{center}
 \begin{normalsize}
-CAIO JOSÉ BORBA VILAR GUIMARÃES:  20160154120 \\
-\vspace{0.8cm}
-DANIEL GALVÃO DE AZEVEDO: 2016008193 \\
-\vspace{0.8cm}
-FELIPE FERNANDES LOPES : 20160154219 \\
-\vspace{0.8cm}
+
 JOELSON DE CARVALHO ROCHA JÚNIOR: 20160153946\\
 \vspace{0.8cm}
- LUCAS RAMALHO NOBRE: 20160154308\\
+ 
 
 \end{normalsize}
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering CONTROLE NO ESPAÇO DE ESTADOS: OBSERVADORES DE ESTADO\\}}}
+{\bf{\large \centering RECAM: MÓDULO DE GRAVAÇÃO INTELIGENTE PARA CÂMERAS DE SEGURANÇA, BASEADO NA DETECÇÃO DE FACES EM CENA.
+	}}
 
 \vspace{4cm}
 
@@ -138,14 +129,11 @@ JOELSON DE CARVALHO ROCHA JÚNIOR: 20160153946\\
 
 {\normalsize
 
-Sexto Relatório Parcial apresentado à disciplina de
-Sistemas de Controle, correspondente à
-avaliação da 3ª unidade do semestre 2017.1 do 7º período
-do curso de Engenharia de Computação e Automação da
+Relatório apresentado à disciplina de
+Processamento Digital de Imagens - DCA0445, correspondente à
+avaliação da 3ª unidade do semestre 2017.2 do curso de Engenharia de Computação e Automação da
 Universidade Federal do Rio Grande do Norte, sob
-orientação do {\bf Prof. Dr. Fábio Meneghetti Ugulino de
-Araújo }e {\bf Prof. Dr. Lucas Costa Pereira Cavalvante.}
-
+orientação do {\bf Prof. Dr. Agostinho de Medeiros Brito Júnior}
 }
 
 \end{adjustwidth}
@@ -154,9 +142,9 @@ Araújo }e {\bf Prof. Dr. Lucas Costa Pereira Cavalvante.}
 
 \begin{center}
 
-Professores:  \center{Fábio Meneghetti Ugulino de Araújo}\\ \center{ Lucas Costa Pereira Cavalvante.}
+Professor:  \center{Agostinho de Medeiros Brito Júnior}\\ 
 
-\vspace{1.0cm}
+\vspace{5.0cm}
 
 {\large Natal-RN\\
 2017}
@@ -177,49 +165,19 @@ Professores:  \center{Fábio Meneghetti Ugulino de Araújo}\\ \center{ Lucas Cos
 
 \begin{flushleft}
 
-\hspace{4ex}O presente relatório busca demonstrar a eficácia da aplicação do controle de um modelo em espaço de estados, utilizando a técnica de seguidor de referência discreto, advindo de um modelo contínuo. O modelo consiste em dois tanques acoplados, em que o primeiro tanque é alimentado por uma bomba, transferindo fluido de um reservatório que recebe seu conteúdo do tanque, fechando um ciclo. Por meio de dados visuais e fundamentação teórica propomos demonstrar o desempenho dessa técnica de controle em espaço de estados.\\
+\hspace{4ex}O presente relatório busca demonstrar o desenvolvimento, em software, de um módulo para câmeras de segurança com o objetivo de realizar a gravação de vídeo baseando-se no algorítmo de detecção de faces de Viola-Jones, permitindo assim o uso de dispositivos de alta resolução em sistemas de vigilância. Ao final de seu desenvolvimento, foram obtidos resultados satisfatórios tais como: redução no tamanho do arquivo de gravação gerado, devido a redução do tempo do vídeo final.\\
 
 \end{flushleft}
 
 \vspace{1.5cm}
 
-\textbf{Palavras-chave: controle em espaço de estados, espaço de estados, seguidor de referência, sistema discreto}
+\textbf{Palavras-chave: Gravação de vídeo. Câmeras de segurança. Detecção de faces. Viola-Jones. Resolução.}
 
 \newpage
 
 %%%%%%%%%%%%%%%  LISTA DE SÍMBOLOS %%%
 
-\thispagestyle{empty}
 
-\begin{center}
-{\large \textbf{LISTA DE SÍMBOLOS}}
-\end{center}
-
-\vspace{3cm}
-
-\begin{tabular}{ l l }
-A\hspace{1.5cm} & Matriz de estados do modelo matemático contínuo.\\
-\phantom{a} & \phantom{a}\\
-B\hspace{1.5cm} & Matriz de controle do modelo matemático contínuo.\\
-\phantom{a} & \phantom{a}\\
-C\hspace{1.5cm} & Matriz de saída do modelo matemático contínuo.\\
-\phantom{a} & \phantom{a}\\
-G\hspace{1.5cm} & Matriz de estados do modelo matemático discreto.\\
-\phantom{a} & \phantom{a}\\
-H\hspace{1.5cm} & Matriz de controle do modelo matemático discreto.\\
-\phantom{a} & \phantom{a}\\
-K\hspace{1.5cm} & Matriz de ganhos do observador discreto.\\
-\phantom{a} & \phantom{a}\\
-W\textsubscript{c}\hspace{1.5cm} & Matriz de controlabilidade do modelo matemático discreto.\\
-\phantom{a} & \phantom{a}\\
-W\textsubscript{o}\hspace{1.5cm} & Matriz de controle do modelo matemático discreto.\\
-\phantom{a} & \phantom{a}\\
-W\hspace{1.5cm} & lei de controle do modelo matemático discreto.\\
-\phantom{a} & \phantom{a}\\
-
-\end{tabular}
-
-\newpage
 
 %%%%%%%%% LISTA DE FIGURAS %%%%%%%%%%%
 
@@ -248,9 +206,22 @@ W\hspace{1.5cm} & lei de controle do modelo matemático discreto.\\
 \section{INTRODUÇÃO}
 
 \begin{flushleft}
-\hspace{4ex}O controle por seguidor de referência é usado amplamente em processos industriais, entre outras áreas, por sua característica de gerar um erro zero, uma vez que o sistema tenta seguir uma determinada entrada. Com o simulador R2D2E, seram feitos testes para simulador este tipo de controle, com o objetivo de aprimorar os conceitos de espaço de estados e o controle de sistemas em tempo discreto, assim como aprender a realizar o controle de tais sistemas utilizando seguidor de referência. 
+	
+\hspace{4ex}Sistemas de monitoramento remoto se tornaram cada vez mais comuns em estabelecimentos de toda natureza (comerciais, públicos, residenciais etc.). Existem vários motivos para o uso dessa tecnologia, desde a inibição de tentativas de assalto até ao estudo comportamentamental de indivíduos (animais ou humanos).
+
+
+\hspace{4ex}Infelizmente, em noticiários de todo o mundo, há vários registros de cenas onde a presença de câmeras não tem surtido efeito na ação criminosa de bandidos, conforme Fabrício\cite{fab}. Em muitos casos não há como identificar quais pessoas participaram do ocorrido, devido a limitação encontrada na transmissão de dados da rede utilizada. Por exemplo: para que sejam reproduzidos, simultaneamente e com alta qualidade, vídeos de 6 câmeras de vigilância em uma farmácia, se faz necessário investir em um computador com alta capacidade de processamento e em uma rede com alta taxa de transferência de dados. A solução encontrada por muitas pessoas é diminuir a resolução das câmeras, produzindo imagens como a da Figura \ref{lowresolutioncamera}. 
+\begin{figure}[h!]
+\includegraphics[scale=.85]{01-circuitointerno.jpg}
+\caption{Câmera de circuito interno em baixa resolução.}
+\label{lowresolutioncamera}
+\end{figure}
+
+\hspace{4ex} Nota-se que essa abordagem permite ao usuário ter um registro do que ocorreu a cena, porém, na grande maioria dos casos a identificação do(s) indivíduo(s) em cena se torna impossível.
 
 \end{flushleft}
+\subsection{Proposta do projeto}
+\hspace{4ex}Este projeto propõe a elaboração de um módulo para câmeras de segurança que otimize a reprodução, simultânea, de vídeos em alta resolução, permitindo com que o usuário possa identificar, de forma mais rápida, pessoas em cena.
 
 \newpage
 
@@ -259,525 +230,112 @@ W\hspace{1.5cm} & lei de controle do modelo matemático discreto.\\
 \thispagestyle{main}
 
 \section{REFERENCIAL TEÓRICO}
-\subsection{Sistema Discreto no Tempo}
-\hspace{4ex}Considerando-se um sistema discreto linear e invariante no tempo descrito em variáveis de estado:
+\subsection{Reconhecimento de objetos com Viola-Jones}
+\hspace{4ex}Em 2001, Paul Viola e Michael Jones\cite{vj} propuseram uma técnica de detecção de objetos chamada "Rapid Object using a Boosted Cascade of Simple Features", que apresenta  uma sugestão voltada a detecção de faces frontais utilizando técnicas que prometem processamento de imagens extremamente rápidos e o alcance de altas taxas de detecção. A técnica foi dividida em 3 partes: 
+\begin{itemize}
+	\item {\bf Imagem Integral}: conceito que permite que o detector compute caraterística de forma mais rápida;
+	\item {\bf Aprendizado baseado em AdaBoost}: seleciona características mais importantes de um grande conjunto de classificadores;
+	\item {\bf Classificadores em cascata}: aplicam classificadores mais complexos à medida que a imagem analisada passa por estágios classificatórios.
+\end{itemize}
+\subsubsection{Imagem Integral}
+\hspace{4ex} Esse procedimento classifica imagens baseando-se em 3 características simples denominadas de "características retangulares", sendo elas de dois, três e quatro retângulos. Elas nada são filtros aplicados à regiões da imagem, conforme ilustradas na Figura \ref{imagemintegral}.
 
-$$x(k+1)=\textbf{G}x(k)+\textbf{H}(k)\,\,\,\,\,\,\,\,\,\,\,\ (1.1);$$   
-$$y(k)=\textbf{C}(k)+\textbf{D}u(k)\,\,\,\,\,\,\,\,\,\,\,\ (1.2);$$
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=1]{imagemintegral.png}
+	\caption{Característica de dois retângulos é mostrada em [A] e [B], de três em [C] e de quatro em [D].}
+	\label{imagemintegral}
+\end{figure}
+ 
+\hspace{4ex}O procedimento para cálculo da imagem integral é feito da seguinte forma: O valor de cada pixel da matriz da imagem integral é equivalente a soma dos valores de todos os pixels da matriz que estão imediatamente acima e à esquerda desse pixel, incluindo seu próprio valor, conforme a Equação \ref{eq:imgintegral}.
+\begin{equation} \label{eq:imgintegral}
+	ii(x,y)=\sum_{x'\le x,y'\le y}^{} i(x',y')
+\end{equation}
 
-\hspace{4ex} Através da equação (1.4)  obtém-se a representação no domínio discreto à partir da representação contínua.
-	$$G(T)=e^{AT}\,\,\,\,\,\,\,\,\,\,\,\ (1.3);$$
-    $$H(T)=\int_{0}^{T} e^{AT}\textbf{B}dt=\bigg(\int_{0}^{T} e^{AT}\bigg)\textbf{B}\,\,\,\,\,\,\,\,\,\,\,\ (1.4); $$
-    \subsubsection{Estabilidade}
-\hspace{4ex}Considerando:
-$$x(k+1)=\textbf{A}x(k)\,\,\,\,\,\,\,\,\,\,\,\ (1.5);$$
-$$x(k)=a^{k}x(0)\,\,\,\,\,\,\,\,\,\,\,\ (1.6);$$
+\hspace{4ex}De forma mais eficiente, é calculado o valor da imagem integral utilizando os valores já adquiridos da imagem. Dessa forma o método não realiza várias adições. A expressão 2 explicita tal raciocínio, onde $i(x,y)$ representa o pixel da imagem e $ii(x,y)$, o da imagem integral.
+\begin{equation}\label{eq:imgintotm}
+	ii(x,y)=i(x,y)+ii(x-1,y)+ii(x,y-1)-ii(x-1,y-1)	
+\end{equation}
 
-\hspace{4ex}Um sistema discreto é estável quando os autovalores da matriz \textbf{G} estão contidos no circulo unitário, ou seja, as raízes do polinômio formado pelo determinante da matriz $(G-ZI)$.
-\subsubsection{Controlabilidade}
-\hspace{4ex} O sistema (\textbf{G,H,C,D}) é controlável se a matriz de controlabilidade tiver posto cheio, ou seja, a quantidade de linhas independentes (n) igual a ordem da matriz. A equação 1.7 ilustra como é a construção da matriz de controlabilidade $W_{c}$.
-
-$$W_{c}=\bigg[ H\,\, GH\,\,...\,\,G^{n-1}H\bigg]\,\,\,\,\,\,\,\,\,\,\,\ (1.7);$$
-\subsubsection{Observabilidade}
-\hspace{4ex}O sistema (\textbf{G,H,C,D}) é observável se a matriz de observabilidade tiver posto cheio, ou seja, a quantidade de linhas independentes (n) igual a ordem da matriz. A equação 1.8 ilustra como é a construção da matriz de observabilidade $W_{o}$.
-\[ 
-\left \{
-  \begin{tabular}{c}
-  C  \\
-  CH \\
-  .  \\ 
-  .  \\ 
-  .  \\
-  $C^{n-1}H$
-  \end{tabular}
-\right \}
-\]$\,\,\,\,\,\,\,\,\,\,\,\ (1.8)$
-\subsection{Seguidor de referência para entrada tipo Degrau}
-\hspace{4ex}Dado o sistema discretizado:
-\[ 
-\left \{
-  \begin{tabular}{c}
-  x(k+1)=$\textbf{G}x(k)+\textbf{H}u(k)$ \\
-  y(k)=$\textbf{C}x(k)$
-  \end{tabular}
-\right \}
-\]
-
-e um sinal do tipo 
-$$v(k)=v(k-1)+r(k)-y(k)$$ 
-onde:$$r(k)-y(k)=e(k)$$
-
-Seja: $$u(k)=-k_{2}x(k)+k_{1}v(k)$$
-
-Tem-se:
-$$u(k+1)=-k_{2}x(k+1)+k_{1}v(k+1)\leftrightarrow $$
-$$\leftrightarrow u(k+1)=(K_{2}-K_{2}G-K_{1}CG)x(k)+(1-K_{2}GH-K_{1}CH)u(k)+k_{1}r(k+1)$$
-
-Logo:
-
-
-$
-\begin{vmatrix}
-x(k+1)\\
-u(k+1)
-\end{vmatrix}
-$
-= $
-\begin{vmatrix}
-G& H\\
-k_{2}-K_{2}G-K_{1}CG & 1-K_{2}H-K_{1}CH
-\end{vmatrix}
-$
-.$
-\begin{vmatrix}
-x(k) \\
-u(h)
-\end{vmatrix}
-$
-+
-$
-\begin{vmatrix}
-0\\
-k_{1}
-\end{vmatrix}
-$
-. $r(k+1)$ 
-
-
-y(k) =$
-\begin{vmatrix}
-C &    0
-\end{vmatrix}
-$
-.$
-\begin{vmatrix}
-x(k)\\
-u(k)
-\end{vmatrix}
-$
-
-Se os autovalores acima forem "estáveis":
-$$v(k)=v(k+1) $$ quando k $\rightarrow \infty$ e
-$$v(\infty)=v(\infty)+r-y(\infty)$$
-Considerando r degrau e definindo:
-
-$$x_{e}(k)=x(k)-x(\infty)$$
-$$u_{e}(k)=U(k)-u(\infty)$$
-
-Tem-se:
-
-$
-\begin{vmatrix}
-x_{e}(k+1)\\
-u_{e}(k+1)
-\end{vmatrix}
-$
-= $
-\begin{vmatrix}
-G& H\\
-k_{2}-K_{2}G-K_{1}CG & 1-K_{2}H-K_{1}CH
-\end{vmatrix}
-$
-.$
-\begin{vmatrix}
-x_{e}(k) \\
-u_{e}(h)
-\end{vmatrix}
-$
-\\
-\\
-
-Definindo:
-w(k)=
-$	
-\begin{vmatrix}
-k_{2}-k_{2}G-K_{1}CG & 1-K_{2}H-K_{1}CH
-\end{vmatrix}
-$
-.$
-\begin{vmatrix}
-x_{e}(k)\\		
-u_{e}(k)
-\end{vmatrix}
-$
-\\
-\\
-Tem-se:
-
-$
-\begin{vmatrix}
-x_{e}(k+1)\\
-u_{e}(k+1)
-\end{vmatrix}
-$
-=$\begin{vmatrix}
-G & H \\
-0 & 0 \\
-\end{vmatrix}
-$
-. $
-\begin{vmatrix}
-x_{e}(k)\\
-u_{e}(k)
-\end{vmatrix}
-$
-\\
-\\
-
-$$\Rightarrow \xi(k+1)=\textbf{\^G}\xi(k)+\textbf{H}w(k)$$
-
-Utilizando a realimentação por estados: $w(k)=\textbf{-\^{k}}\xi(k)$
-
-Utilizando Ackermmann: \textbf{\^K}=
-$
-\begin{vmatrix}
- 0 & 0 & ...&1
-\end{vmatrix}
-$
-.$W_{c}^{-1}$
-.$q_{c}$(\^{G})
-\\
-\\
-Logo:
-$
-\begin{vmatrix}
-K_{2} & K_{1} 
-\end{vmatrix}$
-= $
-\begin{vmatrix}
-K & + & 0 &... & 1
-\end{vmatrix}$
-. $
-\begin{vmatrix}
-G-I & H \\
-CG  & CH
-\end{vmatrix}$
-\newpage
-
-%%%%%%%%%% DESENVOLVIMENTO %%%%%%%%%%%
 
 \thispagestyle{main}
+\subsubsection{Aprendizado baseado em AdaBoost}
 
-\section{DESENVOLVIMENTO}
-\subsection{Desenvolvimento}
-\subsubsection{Modelo Matemático}
-O modelo matemático a seguir descreve o sistema dos dois tanques acoplados:\\
-%\begin{itemize}
-%\item As EDO's que descrevem a dinâmica dos tanques s\~{a}o:\\
-%$\dot{L_1} = -\frac{a_1}{A_1} * \sqrt[2]{\frac{g}{2*L_{10}}}*L_1 + \frac{k_m}{A_1} * V_p$ (Din\^{a}mica do Tanque 1)\\
-%$\dot{L_2} = - \frac{a_2}{A_2} * \sqrt[2]{\frac{g}{2*L_{20}}}*L_2 + \frac{a_1}{A_2} * \sqrt[2]{\frac{g}{2*L_{10}}}*L_1$  (Din\^{a}mica do Tanque 2)\\
+\hspace{4ex}É utilizado para selecionar pequenos conjuntos de características e treinar os classificadores utilizados para detecção de objetos, aumentando assim a performance de classificação de algorítmos simples de aprendizagem.
 
-%\item Passando o modelo de EDO's para o modelo em espaço de estados, temos:\\
+\hspace{4ex}De acordo com Rojas(2009)[x], esse algorítmo foi proposto por Yoav Freund e Robert Shapire, em 1995, como um método que é capaz de gerar um forte classificador à partir de um conjunto fraco. O método testa, classifica e atribui pesos à cada classificador, que por sua vez, são combinados, juntamente com seus pesos, e compõem um classificador mais robusto e eficiente.
 
-$
-\dot{X} = 
-\begin{vmatrix}
-\frac{a_1}{A_1} \sqrt[2]{\frac{g}{2*L_{10}}} & 0 \\  
-\frac{a_1}{A_2} * \sqrt[2]{\frac{g}{2*L_{10}}} & \sqrt[2]{\frac{g}{2*L_{20}}}\\
-\end{vmatrix}
-$
-%$
-%*X(t) + 
-%$
-%\begin{bmatrix}
-%	\frac{k_m}{A_1} \\
- %   0\\
-%\end{bmatrix}
-%$
-%*u(t)\\
-%Y(t) = 
-%$
-%\begin{bmatrix}
-%	0\\
- %   1\\
-%\end{bmatrix}
-%$
-%*x(t)
-%\end{itemize}
+\hspace{4ex}Os pesos são ajustados a cada iteração, bem como os classificadores, retreinados utilizando uma determinda característica. Feito isso, o erro é calculado para cada classificador, escolhe-se o que possuir menor magnitude de erro e então os pesos são reajustados para se dar início a uma nova iteração. Por fim, o classificador mais forte é escolhido à partir de classificadores mais fracos, e é dados pela combinação linear entre eles e seus respectivos pesos como ilustrado na Equação \ref{adaboost}.
 
-\subsubsection{Discretiza\c{c}\~{a}o}
-Considerando as matrizes G e H para a descri\c{c}\~{a}o do sistema, temos:\\
+\begin{equation}\label{adaboost}
+	C_{(m)}=\alpha_{1}k_{1}(x_{i}) +\alpha_{2}k_{2}(x_{i})+...+\alpha_{m}k_{m}(x_{i})
+\end{equation}
 
-	$$G(T)=e^{AT}\,\,\,\,\,\,\,\,\,\,\,\ (3);$$
-    $$H(T)=\int_{0}^{T} e^{AT}\textbf{B}dt=\bigg(\int_{0}^{T} e^{AT}\bigg)\textbf{B}\,\,\,\,\,\,\,\,\,\,\,\ (4); $$
-    
-    
-Dado que: \\
-$a_{1} = a_{2} = 0,1781 cm^2$\\
-$A_{1} = A_{2} = 15,5528 cm^2$\\
-$Km = 4,6$
-$g = 980.665 cm/s^2$
+\hspace{4ex}Onde: $C_{(m)}$ é o conjunto de classificadores, $m$ o número de iterações,$\alpha$ o peso relacionado a cada classificador, $k$ o classificador e $x$ o padrão. 
 
-temos que com um per\'{i}odo de 100ms:
-$
-G = 
-\begin{vmatrix}
-	0,9935 & 1,0000\\
-    1,0066 & 0,9935 
+\hspace{4ex}Após utilizar o método, selecionando uma característica dentre as 180.000 possíveis, Viola e Jones relatam em seu trabalho que as duas características retangulares mais fortes acontecem geralmente em duas regiões próximas aos olhos:
+\begin{itemize}
+	\item região dos olhos em constraste com as do nariz e bochechas;
+	\item região dos olhos em constraste com a do osso do nariz.
+\end{itemize}
 
-\end{vmatrix}
-$
-$
-H = 
-\begin{vmatrix}
-	0,0295\\
-    0.0001
-\end{vmatrix}
-$
+\hspace{4ex}É possível observar o resultado na Figura \ref{adboost}.
 
-\subsubsection{Sistema Aumentado}
-$
-\begin{vmatrix}
-x_{e}(k+1)\\ 
-u_{e}(k+1) \\
-\end{vmatrix}
-$
-=
-$
-\begin{vmatrix}
-0.9935 & 1.000 & 0.0295\\
-1.000 & 0.9935 & 0.0001\\
-0 & 0 & 0 \\
-\end{vmatrix}
-$
-$
-\begin{vmatrix}
-x_e(k)\\
-u_e(k)\\
-\end{vmatrix}
-$
-+
-$
-\begin{vmatrix}
-0\\ 
-0\\
-1\\
-\end{vmatrix}
-$
-*w(k)
-\subsubsection{Matriz de ganhos K}
-$Ka = - \left [0 0 ... 1  \right ]*W_c^{-1}*q_c(Ga)$
-Dado os polos fornecidos:\\
-p\textsubscript{1}: 0,9048\\
-p\textsubscript{2}: 0,9920\\
-p\textsubscript{3}: 0,9980\\
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=.5]{adaboost.png}
+	\caption{Melhores características selecionadas pelo algorítmo de AdaBoost.}
+	\label{adboost}
+\end{figure}
 
-temos que o $\Delta(z)$ = $z^3+2.8948*z^2+2.7905*z-0.8957$
 
-Portanto, temos que $q_c(Ga)$ = $G^3+2.8948*G^2+2.7905*G-0.8957*I$ = 
-$
-\begin{vmatrix}
-11.5880 & 12.5035 & 0.2262\\ 
-12.5035 & 11.5880 & 0.1447\\ 
-0 & 0 & -0.8975
-\end{vmatrix}
-$
 
-Logo, a matriz $K_a$ \'{e} dada por:\\
-$K = \left [K1 K2 K2  \right ] = \left [ 422,5142 391,3749 4.8816 \right ]$, Portanto,\\
-$
-\begin{Bmatrix}
-K_1 = 422,5142\\
-K_2 = \left [ 391,3749 4.8816 \right ]\\
-\end{Bmatrix}
-$
+\subsubsection{Classificadores em cascata}
+\hspace{4ex}São utilizados para reduzir a imagem em regiões que contenham o objeto de interesse, aumentando assim a performance do método.
 
-\newpage
+\hspace{4ex}Classificadores mais simples são aplicados à regiões da imagem.Caso a região passe na avaliação, ela é submetida a classificadores mais complexos, caso contrário, ela é descartada. Essa estratégia reduz o número de subjanelas a serem analizadas, e consequentemente o número de ocorrências de falsos positivos.
 
-%%%%%%%%%% METODOLOGIA %%%%%%%%%%%%%%%
-
+\hspace{4ex}O treinamento do classificador se dá na forma de troca equivalente, ou seja, os classificadores que possuem mais características possuem maior taxa de detecção.
 \thispagestyle{main}
-
 \section{METODOLOGIA}
+\hspace{4ex}O projeto foi desenvolvido na linguagem Python. Utilizou-se a biblioteca de processamento de imagens OpenCV3.0\cite{opencv} , WebCam USB bem como o sistema para controle de versões GIT. Também foi utilizado o treinador para detecção de faces frontais, disponibilizado pelo openCV. Foram feitas consultas no livro do Gonzalez\cite{PDI} durante a disciplina que auxiliam no entendimento do algorítmo.
 
-\subsection{Software}
-\hspace{4ex} O software para o controle da planta em questão foi desenvolvido utilizando-se da linguagem Java, por meio do ambiente integrado de desenvolvimento NetBeans. Foi utilizada a biblioteca JFreeChart para confecção dos gráficos e sua disponibilidade em tempo real, bem como o formulário para preenchimento dos argumentos dos controladores utilizados na configuração de controle. Outra biblioteca utlizada foi a QuanserClient na qual foi disponibilizada pelos professores da disciplina. Esta biblioteca auxilia na escrita e leitura de dados do simulador. Foi utilizada a ferramenta de controle de versão de software \textit{Git}, mantendo coerência entre as versões de código e provendo colaboração dos participantes com segurança.\\
+\hspace{4ex}O código desenvolvido entitulado de $main.py$ segue abaixo na Figura \ref{script}.
 
-\hspace{4ex}Os testes do programa foram todos realizados no simulador de tanques R2D2E, bem como a valida\c{c}\~{a}o de todas as funcionalidades.
-
-\subsection{Testes}
-\hspace{4ex}Foram realizados testes no simulador R2D2E, referentes a dois tanques acoplados. Estes testes foram coordenados por um computador pessoal que estava executando o software de controle desenvolvido pela equipe, conectado por meio de cabeamento Ethernet ao servidor de controle do simulador. Os testes consistiram em variar os valores do ganhos das ações proporcionais, derivativas e integrativas, bem como a altura do nível do tanque de Nª 1, buscando validar a eficácia do software e tirar conclusões acerca da estabilidade do sistema, magnitudes do tempo de acomodação, overshoot e tempo de subida da resposta.
-
-\subsection{Relatório}
-\hspace{4ex}Foi utilizada uma plataforma colaborativa denominada Overleaf para escrita de documentos em \LaTeX , bem como a divisão da escrita das seções entre os componentes do grupo.
-
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=.5]{script.png}
+	\caption{Código comentado para uso no módulo ReCam.}
+	\label{script}
+\end{figure}
 
 \newpage
-
-%%%%%%%%%% RESULTADOS %%%%%%%%%%%%%%%
-
 \thispagestyle{main}
-
 \section{RESULTADOS}
-
-\subsection{Polos}
-
-\hspace{4ex}Para a realização dos testes, foi feita uma análise com foco nos polos do sistema, ao invés dos ganhos. Sendo assim, como valores inicias, foram utilizados os polos sugeridos no roteiro do experimento (p1 = 0.905; p2 = 0.992; p3 = 0.998). O comportamento do sistema com tais polos é mostrado nas figuras 1 e 2. Como é mostrado nas figuras, o sistema é estável no início da simulação, no entanto, com o valor de nivel dos tanques bem distante do set point. Apenas após alguns segundos depois do inicio da simulação é que os passam a variar de forma instável, ficando assim, apenas mais instável com o passar do tempo.
-
-Para facilitar a realização dos testes, estes valores de polo foram utilizados como padrão.
+\hspace{4ex}O resultado obtido após meia hora de funcionamento do módulo foi um vídeo de 21 segundos onde só aparecem as pessoas em cena, conforme a figura \ref{resultado}.
 
 \begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__0_992__0_998__2_}
-\caption{Polos: 0.905; 0.992; 0.998}
+	\centering
+	\includegraphics[scale=.5]{resultado.png}
+	\caption{Imagem resultante.}
+	\label{resultado}
 \end{figure}
 
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__0_992__0_998}
-\caption{Segunda parte Polos: 0.905; 0.992; 0.998}
-\end{figure}
+\hspace{4ex} Em suma, foi possível observar que realmente este tipo de abordagem é promissora. Provavéis melhorias serão implementadas para aprimorá-lo, tais como: utilizar o ReCam em um Raspberry Pi e conseguir utilizá-lo com o auxílio do sistema supervisório ZoneMinder.
+
 
 \newpage
-
-\thispagestyle{main}
-
-\subsubsection{Polos em zero}
-
-\hspace{4ex}Após os valores sugeridos no roteiro, foi testado o comportamento do sistema utilizando-se de polos em zero, como mostrado nas figuras 3, 4, 5 e 6 onde as respostas obtidas foram semelhantes a resposta do sistema com os polos sugeridos. Exceto no caso em que o polo 3 é zero, onda foi mostrada uma resposta também instável, porém com uma maior aproximação do valor do nivel do tanque 2 e do set point.
-
-No caso em que dois dos polos eram zero, o sistema apresentou um resposta mais brusca, como mostrado na figura 6.
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0__0_992__0_998}
-\caption{Polos: 0; 0.992; 0.998}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polo_0_905__0__0_998__2_}
-\caption{Polos: 0.905; 0; 0.998}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__0_992__0__2_}
-\caption{Polos: 0.905; 0.992; 0}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__0__0}
-\caption{Polos: 0.905; 0; 0}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\subsubsection{Valores acima de 1}
-
-\hspace{4ex}Foram testados também, valores acima de 1 para os polos, na qual a resposta do sistema esta mostrado nas Figuras 7, 8 e 9. Nestas figuras, podemos ver o comportamento semelhante ao sistema com polos em zero, com excessão da figura 9, na qual mostra o polo 3 em 1.2. Neste caso, a resposta se assemelha ao comportamento do sistema com os polos sugeridos no roteiro do experimento. 
-Além deste valor, foram testados outros valores para o polo 3, onde, em todos os testes, foi notado pouca influência na resposta do sistema.
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_1_2__0_992__0_998}
-\caption{Polos: 1.2; 0.992; 0.998}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__1_2__0_998}
-\caption{Polos: 0.905; 1.2; 0.998}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905__0_992__1_2}
-\caption{Polos: 0.905; 0.992; 1.2}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\subsubsection{Valor imaginario diferente de zero}
-
-\hspace{4ex}Nas Figuras 10, 11, 12 e 13 são mostrados os testes realizados com polos com parte imaginária diferente de zero, onde a melhor das respostas foi o sistema com polo com parte imaginária igual a 0.03 (Figura 10).
-Para os outros valores testados, pode-se notar uma instabilidade do sistema ao utilizar a parte imaginária dos polos em torno de 0.1. Além disso, foi notado mais uma vez pouca influência do polo 3 sobre o comportamento do sistema. 
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905_i0_03__-0_998}
-\caption{Polos: 0.905 + i0.03; 0.905 + i0.03; -0.998}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905_i0_05__-5}
-\caption{Polos: 0.905 + i0.05; 0.905 + i0.05; -5}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905_i0_03__-0_998_i0_03}
-\caption{Polos: 0.905 + i0.03; 0.905 + i0.03; -0.998 + i0.03}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Polos_0_905_i0_1__-0_998}
-\caption{Polos: 0.905 + i0.1; 0.905 + i0.1; -0.998}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\subsection{Ganhos}
-
-\hspace{4ex}Com o teste dos polos do sistema, pode-se ter uma ideia do comportamento do sistema em relação aos ganhos do mesmo, na qual foram modificados e testados como mostrado nas figuras 14, 15, 16 e 17. Nesta nova abordagem, as respostas obtidas foram muito instaveis, no entanto, nos casos com ganhos em torno de 3, 90 e 2, o nívei do tanque 2 conseguiu acompanhar o set point desejado. 
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Ganhos_20__10__3}
-\caption{}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Ganhos_20__20__10}
-\caption{Polos: 0.905 + i0.1; 0.905 + i0.1; -0.998}
-\end{figure}
-
-\newpage
-
-\thispagestyle{main}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Ganhos_3__90__1}
-\caption{Polos: 0.905 + i0.1; 0.905 + i0.1; -0.998}
-\end{figure}
-
-\begin{figure}[h!]
-\includegraphics[scale=0.2]{Ganhos_3__90__3}
-\caption{Polos: 0.905 + i0.1; 0.905 + i0.1; -0.998}
-\end{figure}
-
-\newpage
-
-%%%%%%%%%% CONCLUSÃO %%%%%%%%%%%%%%%
-
-\thispagestyle{main}
-
-\section{CONCLUSÃO}
-
-
-\hspace{4ex} Com o uso da aplicação implementada, atravéz dos testes realizados, foi possível ver a teoria por trás da experiência proposta. Desta forma, este trabalho nos permitiu ter uma ideia do comportamento de um sistema sendo controlado em espaço de estado com seguidor de referência.
-
-\newpage
-
 %%%%%%%% REFERÊNCIAS %%%%%%%%%%%%%%%%%
 
+
+
 \thispagestyle{main}
-
-\section{REFER\^{E}NCIAS}
 % Referências bibliogáficas (geradas automaticamente)
-\addcontentsline{toc}{chapter}{Referências bibliográficas}
+\addcontentsline{toc}{chapter}{Referências Bibliográficas}
+\bibliographystyle{ieeetr}
 \bibliography{bib/bibliografia}
-G.F. FRANKLIN,D. POWELL e A. EMAMI-NAEINI. \textbf{Sistemas de Controle para Engenharia}. 6 \textsuperscript{a} Ed. Editora Bookman, 2013.
-\appendix
 
-%Apêndice A
-\include{apendice}
+
+
 
 \end{document}
